fix: 畫面跑版 1. 移除不必要的container 2. 調整padding 3. 修正aos不支援mobile的問題，將大區塊都設置overflow-x:hidden

--- a/style.css
+++ b/style.css
@@ -100,7 +100,12 @@ h4 {
 /* 打字機動畫結束 */
 
 /* About */
+#about {
+  overflow-x: hidden;
+}
+
 #about p {
+  margin: .5rem 0;
   line-height: 20px;
 }
 
@@ -121,8 +126,8 @@ h4 {
 /* Skill */
 
 #skills {
+  overflow-x: hidden;
   background-color: rgba(242, 242, 242);
-  padding: 50px;
 }
 
 .skillContent {
@@ -185,10 +190,15 @@ h4 {
 
 #experiencesAndEducation {
   padding: 50px;
+  overflow-x: hidden;
   background-color: rgba(242, 242, 242);
 }
 
 /* work */
+#works {
+  overflow-x: hidden;
+}
+
 #works ul {
   padding: 0;
 }
@@ -257,13 +267,17 @@ img {
   }
 
   #about h1 {
-    font-size: 0.95rem;
+    font-size: 1.25rem;
   }
   #about h2 {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 
   .workItem:nth-child(4) {
+    border-bottom: rgba(133, 118, 118, 0.5) 1px solid;
+  }
+
+  .workItem:nth-child(5) {
     border-bottom: rgba(133, 118, 118, 0.5) 1px solid;
   }
 }
